[package]
name = "sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

csv = "1"

once_cell = "1"
colored = "2"
libc = "0.2"
lazy_static = "1"